--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,4 +1,14 @@
 <h2><%= @list.name %></h2>
+<% @items.each do |item| %>
+	<h3><%= item.name%></h3>
+	<ul>
+		<li><%= item.description%></li> 
+	</ul>
+	<%= item.url %>
+<% end %>
+<br>
+<%=link_to "add item", new_list_item_path(@list) %>
+<br>
 <%=link_to "edit list", edit_list_path(@list) %>
 <br>
 <%=link_to "delete list", @list, method: :delete%>
