--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,15 +1,17 @@
-<h2><%= @list.name %></h2>
+<h2><%= @list.name %></h2> 
+<%= link_to "edit list name", edit_list_path(@list) %>
 <% @items.each do |item| %>
 	<h3><%= item.name%></h3>
 	<ul>
 		<li><%= item.description%></li> 
 	</ul>
-	<%= item.url %>
+	<div class="item-image">
+	<%= image_tag item.url %>
+	</div>
+	<%= button_to "delete item", list_item_path(@list.id, id: item.id), method: :delete %>
 <% end %>
 <br>
 <%=link_to "add item", new_list_item_path(@list) %>
-<br>
-<%=link_to "edit list", edit_list_path(@list) %>
 <br>
 <%=link_to "delete list", @list, method: :delete%>
 <br>
