Add ajax to list name update
Retool add ajax

latest iteration

add ajax to list edit button

Add replace name text with input text using jQuery

Adding all files and pushing incase nitrous.io explodes again

Fix some styling and errors

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,23 @@
  *= require_tree .
  *= require_self
  */
+
+ @import url(http://fonts.googleapis.com/css?family=Lato);
+
+* {
+  font-family: 'Lato', sans-serif;
+}
+
+h1, h2 {
+  color: purple;
+  }
+
+#list-name-form form input {
+  font-size: 1.5em;
+
+}
+
+.item-image img {
+  height: 200px;
+  width: auto;
+}
