--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -2,5 +2,5 @@
   <%= form.text_field :name %>
   <%= form.text_field :description %>
   <%= form.text_field :url %>
-  <%= form.submit "Edit List" %>
+  <%= form.submit "Update Item" %>
 <% end %>
