--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,28 +1,40 @@
+<%=link_to "back to dashboard", root_path%>
+<br>
 <div id="list-name">
 	<h2><div id="list-name-current"><%= @list.name %></div></h2>
 
   <button id="edit-list-name">edit list name</button>
 
-	<div id="list-name-form" style="background-color:red; display: none;">
+	<div id="list-name-form" style="display: none;">
 		<%= form_for(@list) do |form| %>
     <%= form.text_field :name, placeholder: "name"%>
     <%= form.submit "update name" %>
 		<% end %>
     <button id="cancel-edit-list-name">cancel</button>
 	</div>
+</div>
 
-<% @items.each do |item| %>
-	<h3><%= item.name%></h3>
-	<div class="item-image">
-	<%= image_tag item.url %>
-	</div>
-	<p><%= item.description%></p>
-	<%= button_to "delete item", list_item_path(@list.id, id: item.id), method: :delete %>
-	<%= link_to "edit item", edit_list_item_path(@list.id, id: item.id) %>
-<% end %>
+<ul>
+	<% @items.each do |item| %>
+		<li>
+			<h3>
+				<div class="item-name-current">
+					<%= item.name%>
+				</div>
+			</h3>
+		</li>
+		<button class="edit-item-name">edit item name</button>
+		<div class="item-name-form" style="background-color: red; display: none;">
+			<%= form_for item, url: list_item_path(@list.id, id: item.id), method: :put do |form| %>
+			  <%= form.text_field :name %>
+			  <%= form.submit "Update Name" %>
+			<% end %>
+		</div>
+		<%= button_to "delete item", list_item_path(@list.id, id: item.id), method: :delete %>
+	<% end %>
+</ul>
+
 <br>
 <%=link_to "add item", new_list_item_path(@list) %>
 <br>
 <%=link_to "delete list", @list, method: :delete%>
-<br>
-<%=link_to "back to dashboard", root_path%>
