--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -20,12 +20,20 @@
   font-family: 'Lato', sans-serif;
 }
 
+a {
+  text-decoration: none;
+}
+
 h1, h2 {
   color: magenta;
   }
 
 .list_name_update_form input {
   font-size: 1.5em;
+}
+
+.new_list_form input, .list-names {
+  font-size: .9em;
 }
 
 .item_name_update_form input {
@@ -37,6 +45,10 @@ h1, h2 {
   width: auto;
 }
 
-.item_name_update_form, .list_name_update_form, #cancel-edit-list-name, .cancel-edit-item-name {
+.new_list_form, .item_name_update_form, .list_name_update_form, #cancel-edit-list-name, #cancel-add-list, .cancel-edit-item-name {
+  display: none;
+}
+
+.hidden {
   display: none;
 }
