--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -36,7 +36,7 @@ h1, h2 {
   font-size: .9em;
 }
 
-.item_name_update_form input {
+.item_name_update_form input, .new_item_form input {
   font-size: 1.1em;
 }
 
@@ -45,7 +45,7 @@ h1, h2 {
   width: auto;
 }
 
-.new_list_form, .item_name_update_form, .list_name_update_form, #cancel-edit-list-name, #cancel-add-list, .cancel-edit-item-name {
+.new_list_form, .new_item_form, .item_name_update_form, .list_name_update_form, #cancel-edit-list-name, #cancel-add-list, .cancel-edit-item-name {
   display: none;
 }
 
