--- a/app/views/items/_item.erb
+++ b/app/views/items/_item.erb
@@ -1,12 +1,11 @@
 <li class="item">
-  <h3><%= item.name%></h3>
-  <button class="edit-item-name">edit item name</button>
+  <h3 class="item-name"><%= item.name%></h3>
     <%= form_for item, html: {class: "item_name_update_form"}, url: list_item_path(@list.id, id: item.id), method: :put do |form| %>
       <%= form.text_field :name %>
       <%= form.text_field :description, placeholder: "Description" %>
     	<%= form.text_field :url, placeholder: "Add a Url Image of this Item"%>
       <%= form.submit "update item" %>
     <% end %>
-    <button class="cancel-edit-item-name">cancel</button>
+  <button class="edit-item-name">edit item</button>
   <%= button_to "delete", list_item_path(@list.id, id: item.id), method: :delete %>
 </li>
