Remove no longer necessary methods in controllers and routes.

--- a/app/views/homes/show.html.erb
+++ b/app/views/homes/show.html.erb
@@ -1,6 +1,6 @@
 <h1>Welcome</h1>
 <h2>My Lists:</h2>
-<button id="add-list"></button>
+<button id="add-list">+</button>
 
 <ul>
   <li class="new_list_form">
