--- a/app/views/items/_item.erb
+++ b/app/views/items/_item.erb
@@ -1,11 +1,9 @@
 <li class="item">
-  <h3 class="item-name"><%= item.name%></h3>
-    <%= form_for item, html: {class: "item_name_update_form"}, url: list_item_path(@list.id, id: item.id), method: :put do |form| %>
-      <%= form.text_field :name %>
-      <%= form.text_field :description, placeholder: "Description" %>
-    	<%= form.text_field :url, placeholder: "Add a Url Image of this Item"%>
-      <%= form.submit "update item" %>
+  <h3 class="item-name"><%= item.name %></h3>
+    <%= form_for item, html: {class: "update_item_form"}, url: list_item_path(@list.id, id: item.id), method: :put do |form| %>
+      <%= form.text_field :name, placeholder: "name this item" %>
+      <%= form.submit "update" %>
     <% end %>
-  <button class="edit-item-name">edit item</button>
+  <button class="edit-item">edit</button>
   <%= button_to "delete", list_item_path(@list.id, id: item.id), method: :delete %>
 </li>
