--- a/app/views/lists/_list.html.erb
+++ b/app/views/lists/_list.html.erb
@@ -1,1 +1,3 @@
-<li class="list-names"><%= link_to list.name, list %></li>
+<li class="list-names">
+  <h3><%= link_to list.name, list %></h3>
+</li>
