--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -4,7 +4,7 @@
     <%= form.text_field :name %>
     <%= form.submit "✓" %>
 		<% end %>
-		<%=button_to "delete list", @list, {:method => :delete, :form_class => "delete-list"} %>
+		<%=button_to "delete", @list, {:method => :delete, :form_class => "delete-list"} %>
 </div>
 
 <button id="add-item">add</button>
