--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -18,6 +18,13 @@
 
 * {
   font-family: 'Lato', sans-serif;
+}
+
+.container {
+  margin-left: auto ;
+  margin-right: auto ;
+  padding-bottom: 5px;
+  width: 320px;
   text-align: center;
 }
 
@@ -32,6 +39,10 @@ li {
 a {
   text-decoration: none;
   color: black;
+}
+
+form input {
+  text-align: center;
 }
 
 a:hover {
