--- a/app/views/items/_item.erb
+++ b/app/views/items/_item.erb
@@ -1,6 +1,6 @@
 <li class="item">
   <h3 class="item-name"><%= item.name %></h3>
-    <%= form_for item, html: {class: "update_item_form"}, url: list_item_path(@list.id, id: item.id), method: :put do |form| %>
+    <%= form_for item, html: {class: "update_item_form"}, url: list_item_path(@list.id, id: item.id) do |form| %>
       <%= form.text_field :name, placeholder: "name this item" %>
       <%= form.submit "✓" %>
     <% end %>
